Add application/component.
Issue-ID: DCAEGEN2-879
